--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
                 
                 <!-- Text content and buttons -->
                 <div class="max-w-3xl mx-auto text-center py-16">
-                    <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white tracking-tight scroll-animate gradient-text" style="transition-delay: 100ms;">Designing Systems. Building Futures.</h1>
+                    <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white tracking-tight scroll-animate gradient-text" style="transition-delay: 100ms;">Hello, I'm Chloe.</h1>
                     <p class="mt-6 text-lg sm:text-xl text-gray-300 scroll-animate" style="transition-delay: 250ms;">
-                        I'm an experienced user researcher leading mixed-method research across complex, zero-to-one domains like developer tooling, B2B SaaS, and consumer tech. With previous experience at Meta Reality Labs and Google Android, I thrive on tackling ambiguous problems. Based in London, I work with teams globally across all timezones.
+                        I'm a user researcher leading mixed-method research across complex, zero-to-one domains like developer tooling, B2B, health and consumer tech. Based in London, I work with teams globally across all timezones.
                     </p>
                     
                     <!-- Action Buttons -->
@@ -214,11 +214,11 @@
                             <div class="mb-12 ml-10 scroll-animate" style="transition-delay: 150ms;">
                                 <span class="absolute -left-[27px] top-1 flex items-center justify-center w-4 h-4 bg-gray-600 rounded-full ring-4 ring-black"></span>
                                 <div class="timeline-card bg-gray-900/50 p-6 rounded-lg border border-gray-800">
-                                    <h3 class="text-xl font-semibold text-white">Senior UX Researcher, Android</h3>
+                                    <h3 class="text-xl font-semibold text-white">Senior UX Researcher</h3>
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Google</h4>
                                     <p class="text-sm text-gray-400 mb-4">May 2022 - Present · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>Leading foundational research to inform future Android strategy and product development.</li>
+                                        <li>📱 I lead research for various Android OS product teams, focusing on areas like AI integration in system settings. My research toolkit includes both qualitative and quantitative methods, from surveys and data analysis to interviews and concept/usability testing.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -226,11 +226,11 @@
                              <div class="mb-12 ml-10 scroll-animate" style="transition-delay: 300ms;">
                                 <span class="absolute -left-[27px] top-1 flex items-center justify-center w-4 h-4 bg-gray-600 rounded-full ring-4 ring-black"></span>
                                 <div class="timeline-card bg-gray-900/50 p-6 rounded-lg border border-gray-800">
-                                    <h3 class="text-xl font-semibold text-white">UX Researcher, Metaverse (Contract)</h3>
+                                    <h3 class="text-xl font-semibold text-white">Senior UX Researcher</h3>
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Meta Reality Labs</h4>
                                     <p class="text-sm text-gray-400 mb-4">Aug 2021 - Apr 2022 · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>Led research on developer experience for AR/VR creation tools.</li>
+                                        <li>👓 I was leading both strategic and evaluative research for a 0-1 augmented reality software, used by developers and technical creators to build experiences in the metaverse. I designed and implemented foundational research to understand developers learning strategies, resulting in learning frameworks used for defining metrics and roadmap prioritisation. </li>
                                     </ul>
                                 </div>
                             </div>
@@ -238,11 +238,13 @@
                              <div class="mb-12 ml-10 scroll-animate" style="transition-delay: 450ms;">
                                 <span class="absolute -left-[27px] top-1 flex items-center justify-center w-4 h-4 bg-gray-600 rounded-full ring-4 ring-black"></span>
                                 <div class="timeline-card bg-gray-900/50 p-6 rounded-lg border border-gray-800">
-                                    <h3 class="text-xl font-semibold text-white">Senior UX Researcher</h3>
-                                    <h4 class="text-lg font-medium text-[#69CBDF] mb-1">MVF</h4>
+                                    <h3 class="text-xl font-semibold text-white">Lead UX Researcher</h3>
+                                    <h4 class="text-lg font-medium text-[#69CBDF] mb-1">MVF Global</h4>
                                     <p class="text-sm text-gray-400 mb-4">Feb 2021 - Aug 2021 · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                       <li>Led user research for a portfolio of B2B publishing websites.</li>
+                                       <li>🚀 I built the user research practice from scratch for B2B SaaS publishers and a proprietary ad performance management platform.
+🚀 I built the user research practice from scratch for B2B SaaS publishers and a proprietary ad performance management platform.
+</li>
                                     </ul>
                                 </div>
                             </div>
@@ -250,11 +252,11 @@
                              <div class="mb-12 ml-10 scroll-animate" style="transition-delay: 600ms;">
                                 <span class="absolute -left-[27px] top-1 flex items-center justify-center w-4 h-4 bg-gray-600 rounded-full ring-4 ring-black"></span>
                                 <div class="timeline-card bg-gray-900/50 p-6 rounded-lg border border-gray-800">
-                                    <h3 class="text-xl font-semibold text-white">UX Researcher (Contract)</h3>
+                                    <h3 class="text-xl font-semibold text-white">Quant Researcher</h3>
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Hong Kong University of Science and Technology</h4>
                                     <p class="text-sm text-gray-400 mb-4">Dec 2020 - Feb 2021 · Hong Kong SAR</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>Conducted research for a real-time clinical data dashboard in ICUs.</li>
+                                        <li> I worked on quantitative research projects on topics such as organizational behavior and human decision making processes, relationship between celebrities and patriotism on social media, conflict minerals reporting by S&P500 companies. Methods include survey, multivariate linear regression, computational analysis of archival textual data by keyword extraction.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -266,7 +268,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Kano Computing</h4>
                                     <p class="text-sm text-gray-400 mb-4">Oct 2019 - Aug 2020 · London, England</p>
                                      <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>Researched and designed creative coding experiences for kids.</li>
+                                        <li>👧 Brought in by the product owner for a short-term engagement, I led user experience research to evaluate a block-based coding challenge designed to teach children (ages 8–14) coding concepts. Conducted user interviews and playtesting sessions with children and their parents to assess learning outcomes and identify opportunities to improve engagement and comprehension—insights that directly informed the product roadmap.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -278,7 +280,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Vinehealth</h4>
                                     <p class="text-sm text-gray-400 mb-4">Mar 2019 - Sep 2019 · London, England</p>
                                      <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>Contributed to the development of an app to support cancer patients.</li>
+                                        <li>💊 Partnered with the design lead to conduct qualitative research with patients managing cancer symptoms and treatment, uncovering insights to inform product development.</li>
                                     </ul>
                                 </div>
                             </div>
@@ -286,11 +288,11 @@
                             <div class="mb-12 ml-10 scroll-animate" style="transition-delay: 1050ms;">
                                 <span class="absolute -left-[27px] top-1 flex items-center justify-center w-4 h-4 bg-gray-600 rounded-full ring-4 ring-black"></span>
                                 <div class="timeline-card bg-gray-900/50 p-6 rounded-lg border border-gray-800">
-                                    <h3 class="text-xl font-semibold text-white">UX Research Intern</h3>
+                                    <h3 class="text-xl font-semibold text-white">Product Manager and Researcher</h3>
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Cisco</h4>
                                     <p class="text-sm text-gray-400 mb-4">Jun 2018 - Aug 2018 · San Jose, California</p>
                                      <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>Conducted usability testing for enterprise networking software.</li>
+                                        <li>📈 I led product, marketing and user research for CiscoZeus, a SaaS large-scale data ingestion, analysis & visualization enterprise software (start-up/intrapreneurship at Cisco).</li>
                                     </ul>
                                 </div>
                             </div>
@@ -311,7 +313,7 @@
                             </div>
                              <div class="timeline-card bg-gray-900/50 p-6 rounded-lg border border-gray-800 flex flex-col scroll-animate" style="transition-delay: 300ms;">
                                 <div class="flex-grow">
-                                    <h3 class="text-xl font-semibold text-white">BBA in Management Information System with Statistic Minor</h3>
+                                    <h3 class="text-xl font-semibold text-white">BBA in Management Information System with Statistics Minor</h3>
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">CUHK Business School</h4>
                                     <p class="text-base text-gray-300">Hong Kong 🇭🇰</p>
                                 </div>
