--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             <div class="space-y-4 text-lg text-gray-300 md:col-span-2">
                                  <p class="scroll-animate" style="transition-delay: 150ms;">It's all about digging deep to truly understand our customers – their needs, their everyday struggles, and what makes them tick. I then take those insights and turn them into clear guidance that helps our teams build products that are not just impactful, but genuinely user-centered.</p>
                                  <p class="scroll-animate" style="transition-delay: 300ms;">I love leading user research projects from start to finish. That means everything from figuring out the right questions to ask and the best ways to get answers, to making sense of all our findings and sharing recommendations that really hit home. I team up closely with product managers, designers, engineers, marketers, and business strategists, making sure that user-centered thinking is woven into every stage of how we build products.</p>
-                                 <p class="scroll-animate" style="transition-delay: 450ms;">I adeptly deploy a diverse toolkit of methods, including foundational and tactical approaches such as user interviews, usability testing, concept testing, surveys, contextual inquiries, and diary studies. I enjoy developing new research methods for specific projects, using the latest technology to yield rich and valid findings at pace.</p>
+<!--                                  <p class="scroll-animate" style="transition-delay: 450ms;">I adeptly deploy a diverse toolkit of methods, including foundational and tactical approaches such as user interviews, usability testing, concept testing, surveys, contextual inquiries, and diary studies. I enjoy developing new research methods for specific projects, using the latest technology to yield rich and valid findings at pace.</p> -->
                                  <p class="scroll-animate" style="transition-delay: 600ms;">Ultimately, my biggest strength is taking those sometimes complex research findings and transforming them into clear, engaging stories. These stories then directly shape our product strategy, design choices, and what features we prioritize, making sure we're always building what truly matters to users.</p>
                             </div>
                             <div><!-- This is the empty second column --></div>
@@ -218,7 +218,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Google</h4>
                                     <p class="text-sm text-gray-400 mb-4">May 2022 - Present · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                        <li>📱 I lead research for various Android OS product teams, focusing on areas like AI integration in system settings. My research toolkit includes both qualitative and quantitative methods, from surveys and data analysis to interviews and concept/usability testing.</li>
+                                        <p> I lead research for various Android OS product teams, focusing on areas like AI integration in system settings. My research toolkit includes both qualitative and quantitative methods, from surveys and data analysis to interviews and concept/usability testing.</p>
                                     </ul>
                                 </div>
                             </div>
