--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Google</h4>
                                     <p class="text-sm text-gray-400 mb-4">May 2022 - Present · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p>I lead research for various Android OS product teams, focusing on areas like AI integration in system settings. My research toolkit includes both qualitative and quantitative methods, from surveys and data analysis to interviews and concept/usability testing.</p>
+                                    <p>📱 I lead research for various Android OS product teams, focusing on areas like AI integration in system settings. My research toolkit includes both qualitative and quantitative methods, from surveys and data analysis to interviews and concept/usability testing.</p>
                                     </ul>
                                 </div>
                             </div>
@@ -230,7 +230,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Meta Reality Labs</h4>
                                     <p class="text-sm text-gray-400 mb-4">Aug 2021 - Apr 2022 · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p>I was leading both strategic and evaluative research for a 0-1 augmented reality software, used by developers and technical creators to build experiences in the metaverse. I designed and implemented foundational research to understand developers learning strategies, resulting in learning frameworks used for defining metrics and roadmap prioritisation. </p>
+                                    <p>👓 I was leading both strategic and evaluative research for a 0-1 augmented reality software, used by developers and technical creators to build experiences in the metaverse. I designed and implemented foundational research to understand developers learning strategies, resulting in learning frameworks used for defining metrics and roadmap prioritisation. </p>
                                     </ul>
                                 </div>
                             </div>
@@ -242,7 +242,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">MVF Global</h4>
                                     <p class="text-sm text-gray-400 mb-4">Feb 2021 - Aug 2021 · London, England</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p>I built the user research practice from scratch for B2B SaaS publishers and a proprietary ad performance management platform.</p>
+                                    <p>🚀 I built the user research practice from scratch for B2B SaaS publishers and a proprietary ad performance management platform.</p>
                                     </ul>
                                 </div>
                             </div>
@@ -254,7 +254,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Hong Kong University of Science and Technology</h4>
                                     <p class="text-sm text-gray-400 mb-4">Dec 2020 - Feb 2021 · Hong Kong SAR</p>
                                     <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p> I worked on quantitative research projects on topics such as organizational behavior and human decision making processes, relationship between celebrities and patriotism on social media, conflict minerals reporting by S&P500 companies. Methods include survey, multivariate linear regression, computational analysis of archival textual data by keyword extraction.</p>
+                                    <p>👩‍🔬 I worked on quantitative research projects on topics such as organizational behavior and human decision making processes, relationship between celebrities and patriotism on social media, conflict minerals reporting by S&P500 companies. Methods include survey, multivariate linear regression, computational analysis of archival textual data by keyword extraction.</p>
                                     </ul>
                                 </div>
                             </div>
@@ -266,7 +266,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Kano Computing</h4>
                                     <p class="text-sm text-gray-400 mb-4">Oct 2019 - Aug 2020 · London, England</p>
                                      <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p>Brought in by the product owner for a short-term engagement, I led user experience research to evaluate a block-based coding challenge designed to teach children (ages 8–14) coding concepts. Conducted user interviews and playtesting sessions with children and their parents to assess learning outcomes and identify opportunities to improve engagement and comprehension—insights that directly informed the product roadmap.</p>
+                                    <p>👧 Brought in by the product owner for a short-term engagement, I led user experience research to evaluate a block-based coding challenge designed to teach children (ages 8–14) coding concepts. Conducted user interviews and playtesting sessions with children and their parents to assess learning outcomes and identify opportunities to improve engagement and comprehension—insights that directly informed the product roadmap.</p>
                                     </ul>
                                 </div>
                             </div>
@@ -278,7 +278,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Vinehealth</h4>
                                     <p class="text-sm text-gray-400 mb-4">Mar 2019 - Sep 2019 · London, England</p>
                                      <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p>Partnered with the design lead to conduct qualitative research with patients managing cancer symptoms and treatment, uncovering insights to inform product development.</p>
+                                    <p>💊 Partnered with the design lead to conduct qualitative research with patients managing cancer symptoms and treatment, uncovering insights to inform product development.</p>
                                     </ul>
                                 </div>
                             </div>
@@ -290,7 +290,7 @@
                                     <h4 class="text-lg font-medium text-[#69CBDF] mb-1">Cisco</h4>
                                     <p class="text-sm text-gray-400 mb-4">Jun 2018 - Aug 2018 · San Jose, California</p>
                                      <ul class="list-disc list-outside pl-5 text-gray-300 space-y-2">
-                                    <p>I led product, marketing and user research for CiscoZeus, a SaaS large-scale data ingestion, analysis & visualization enterprise software (start-up/intrapreneurship at Cisco).</p>
+                                    <p>📈 I led product, marketing and user research for CiscoZeus, a SaaS large-scale data ingestion, analysis & visualization enterprise software (start-up/intrapreneurship at Cisco).</p>
                                     </ul>
                                 </div>
                             </div>
