--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     id: 1,
                     title: 'Meta Spark Developer Education Strategy',
                     description: 'A foundational research to establish a strategic developer education framework for a zero-to-one product, accelerating adoption and enhancing user satisfaction.',
-                    image: 'https://i.imgur.com/8aM3bV7.jpeg',
+                    image: 'Orion.webp',
                     challenge: "I joined a new team during a significant company pivot to an unfamiliar user group, lacking prior research on their educational needs. This presented a unique opportunity to define a new strategic direction and validate the true necessity of potential educational solutions, such as a large-scale learning site.",
                     actions: "As the UXR, I launched a series of research efforts including exploratory interviews, focus groups, and extensive secondary research to understand the existing education ecosystem and user needs from different angles. This comprehensive approach helped identify genuine learning gaps and how creators truly learn, rather than simply validating a pre-conceived solution. I aligned these user-centered insights with XFN partners to inform our strategy.",
                     outcomes: "My research not only shaped our team's strategy and roadmap but also led to the creation of an actionable framework for our developer education strategy. XFN partners gained crucial clarity, using findings to challenge new ideas and prevent investment in unneeded features, including a 'no-go' on certain paths. We identified key tracking metrics in collaboration with data science, resulting in increased helpfulness scoring in customer surveys and informing broader developer education efforts.",
