--- a/index.html
+++ b/index.html
@@ -331,16 +331,16 @@
                     <div class="mt-20">
                         <h2 class="text-3xl font-bold text-white mb-8 scroll-animate">Skills & Interests</h2>
                         <div class="flex flex-wrap gap-4 scroll-animate" style="transition-delay: 150ms;">
-                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Customer Success</span>
-                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Product Strategy</span>
-                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Market Research</span>
-                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Systems Thinking</span>
                              <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">User Interview</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Concept testing</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Usability testing</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Diary study</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Survey</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Ethnography</span>
+                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Customer Success</span>
+                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Product Strategy</span>
+                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Market Research</span>
+                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Systems Thinking</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Exploratory Data Analysis</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">A/B Testing</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Correlation</span>
@@ -348,6 +348,7 @@
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Figma</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Psychology</span>
                             <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Quantified self</span>
+                            <span class="bg-gray-800 text-gray-300 px-4 py-2 rounded-full">Vocal</span>
                         </div>
                     </div>
                     
