--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 <!--                                  <p class="scroll-animate" style="transition-delay: 450ms;">I adeptly deploy a diverse toolkit of methods, including foundational and tactical approaches such as user interviews, usability testing, concept testing, surveys, contextual inquiries, and diary studies. I enjoy developing new research methods for specific projects, using the latest technology to yield rich and valid findings at pace.</p> -->
                                  <p class="scroll-animate" style="transition-delay: 600ms;">Ultimately, my biggest strength is taking those sometimes complex research findings and transforming them into clear, engaging stories. These stories then <b>directly shape our product strategy, design choices, and what features we prioritize</b>, making sure we're always building what truly matters to users.</p>
                             </div>
-                            <div><!-- This is the empty second column --></div>
+                            <div>
+                                <img src="propic_doodle.png">
+                            </div>
                         </div>
                     </div>
                     
