--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <!-- Full-width responsive image -->
                 <div class="w-full h-[50vh] md:h-[60vh] mt-8 scroll-animate">
                     <img src="propic_doodle.png"
-                        class="mx-auto h-full object-cover shadow-2xl shadow-[#69CBDF]/20">
+                        class="mx-auto h-full">
 <!--                     <img src="https://images.unsplash.com/photo-1531297484001-80022131f5a1?q=80&w=2020&auto=format&fit=crop" 
                          alt="Abstract modern background of interconnected lights" 
                          class="w-full h-full object-cover rounded-lg shadow-2xl shadow-[#69CBDF]/20"> -->
