--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
                                  <p class="scroll-animate" style="transition-delay: 600ms;">Ultimately, my biggest strength is taking those sometimes complex research findings and transforming them into clear, engaging stories. These stories then <b>directly shape our product strategy, design choices, and what features we prioritize</b>, making sure we're always building what truly matters to users.</p>
                             </div>
                             <div>
-                                <img src="propic_doodle.png">
+                                <div class="scroll-animate" style="transition-delay: 150ms;">
+                                    <img src="propic_doodle.png" class="w-full">
                             </div>
                         </div>
                     </div>
