--- a/index.html
+++ b/index.html
@@ -664,13 +664,14 @@
             // Function to populate the work grid with expandable projects
             function populateWorkGrid() {
                 if (!workGrid) return;
+                // The new, corrected code
                 workGrid.innerHTML = projects.map((project, index) => `
-                    <div class="project-card relative overflow-hidden group cursor-pointer transform hover:scale-105 transition-transform duration-300 scroll-animate" style="transition-delay: ${index * 100}ms" data-project-id="${project.id}">
-                        <img src="${project.heroImage}" alt="${project.title}" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
-                        <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-black/40 to-transparent"></div>
-                        <div class="absolute bottom-0 left-0 p-6">
+                    <div class="project-card relative overflow-hidden group cursor-pointer rounded-lg bg-gray-900 scroll-animate" style="transition-delay: ${index * 100}ms" data-project-id="${project.id}">
+                        <img src="${project.heroImage || project.image}" alt="${project.title}" class="absolute inset-0 w-full h-full object-cover transition-transform duration-300 group-hover:scale-110">
+                        <div class="absolute inset-0 card-gradient"></div>
+                        <div class="relative flex flex-col justify-end h-full p-6">
                             <h3 class="text-2xl font-bold text-white">${project.title}</h3>
-                            <p class="text-md text-gray-300">${project.description}</p>
+                            <p class="text-md text-gray-200 mt-2">${project.description}</p>
                         </div>
                     </div>
                 `).join('');
